# cmake_minimum_required(VERSION 3.20)
# set(CMAKE_CXX_STANDARD 17)


# set(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../lib")
# file(GLOB_RECURSE SRC_DIR_LIST "./*.cpp")
# message("base---${PROJECT_SOURCE_DIR}")

# add_library(
#         net 
#         STATIC
#         ${SRC_DIR_LIST}									
# ) 

# target_include_directories(net PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
# target_link_libraries(net base )



# # add_subdirectory ("tests") # 指定 编译子目录